# AccTrussDecomposition

./: .gitignore  LICENSE  README.md
doc/: RapidsSyntheticGraphGen.md
h-idx/: CMakeLists.txt  ReadMe.md
h-idx/bnd/: ReadMe.md  bucket.cpp  bucket.h  graph.cpp  hierarchy.cpp  kcore.cpp  ktruss.cpp  main.cpp  main.h  reorder.h  tip.cpp  util.cpp  wing.cpp
h-idx/bnd/tools/: CMakeLists.txt  ReadMe.md  balanced_kcore_stat.cpp  bigraph.cpp  bigraph.h  bigraph_old.cpp  bigraph_old.h
h-idx/bnd/tools/playground/: test_stl.cpp
h-idx/cmake/: FindPCM.cmake
h-idx/nd/: LICENSE.txt  README.md  graph.cpp  hierarchy.cpp  k1-3.cpp  k1-4.cpp  k2-4.cpp  k3-4.cpp  kcore.cpp  ktruss.cpp  main.cpp  main.h  util.cpp
h-idx/playground/: CMakeLists.txt  test_sizeof.cpp
h-idx/pnd/: README.md  bucket.cpp  bucket.h  graph.cpp  local12.cpp  local23.cpp  local23_yche.cpp  local23_yche_bak.cpp  local34.cpp  main.cpp  main.h
h-idx/pnd/deprecated/: local23_yche.md
h-idx/reordering_utils/: pkc_reorder_refactor.cpp  reorder_utils.cpp  reorder_utils.h
h-idx/stream-kcore/: README  bucket.cpp  bucket.h  edge_generators.cpp  graph.h  kcore.cpp  larray.h  main-kcore.cpp  main-kcore.hpp  subcore.cpp  timestamp.hpp  traversal.cpp  ulib.c  ulib.h  xcore_insertion.cpp  xcore_removal.cpp  xtraversal_insertion.cpp
h-idx/tools/: BFC.cpp  CMakeLists.txt
h-idx/tools/denest/: Makefile  README  VERSION  densest.cpp  hi_pr.c  hi_pr.h  parser.c  timer.c  types.h  values.h
h-idx/util/: boolarray.h  util.h
h-idx/util/containers/: ThreadSafeDisjointSet.h  union_find.h
h-idx/util/graph/: graph.cpp  graph.h  graph_bin_input_helper.cpp  graph_bin_input_helper.h  pre_processing_dodg.h  triangle_counting.h
h-idx/util/ips4o/: ips4o.hpp
h-idx/util/primitives/: primitives.h
h-idx/util/search/: search_util.h
h-idx/util/serialization/: core_histogram.h  histogram_stats.h
h-idx/util/set-inter/: csr_set_intersection_hybrid.cpp  csr_set_intersection_hybrid.h  csr_set_intersection_serial.cpp  csr_set_intersection_serial.h  csr_set_intersection_simd.cpp  csr_set_intersection_simd.h
msp/: .gitignore  CMakeLists.txt  Makefile  README.md  graph-structure.md
msp/cmake/: FindGperftools.cmake  SetLibraries.cmake  SetSIMDFlages.cmake
msp/code-review/: bucket.md  cmd.md  data_structures.md  kt_serial.md  res.md
msp/src/: and-improved.cpp  and.cpp  cmdline.c  defs.h  io.c  kt.cpp  kt.h  kt_hmap.c  kt_hmap.h  kt_sbucket.c  kt_sbucket.h  kt_thread.c  kt_thread.h  main.cpp  multistage-peeling.cpp  proto.h  struct.h  util.c
msp/src/yche/: core_histogram.h  log.cpp  log.h  search.h  timer.h  util.h  yche_helper.h  yche_helpers.cpp  yche_serialization.h
opt-cpu-large-data/: CMakeLists.txt  ReadMe.md
opt-cpu-large-data/opt_pkt/: extern_variables.h  iter_helper.cpp  iter_helper.h  iter_stat_helper.h  main.cpp  main_helper.h  parallel_all_edge_cnc.h  pkt_merge.cpp  pkt_support_update_utils.h  pkt_tri_cnt_intermediate.cpp  pkt_tri_cnt_intermediate.h
opt-cpu-large-data/reordering_utils/: reorder_utils.cpp
opt-cpu-large-data/util/: util.h
opt-cpu-large-data/util/containers/: boolarray.h  radix_hash_map.h
opt-cpu-large-data/util/graph/: graph.cpp  graph.h  graph_preprocessing.cpp
opt-cpu-large-data/util/search/: search_util.cpp  search_util.h
opt-offload-large-data/: CMakeLists.txt  ReadMe.md  cuda_extern_functions.cuh  cuda_pack.cu  cuda_tc.cu  cuda_tc_pack_vertex_cpu.h  main.cu  main_helper.h  pkt_cuda_experimental.cu  pkt_inter_based_sup_updates.cu
opt-offload-large-data/cuda_fake/: fake_math.h
opt-offload-large-data/host/: extern_variables.cpp  histogram.h  iter_helper.cpp  iter_helper.h  parallel_all_edge_cnc.h  pkt_merge.cpp  pkt_support_update_utils.h  pkt_tri_cnt_intermediate.cpp  pkt_tri_cnt_intermediate.h  primitives.h  set_inter_cnt_utils.h  set_utils.h
opt-offload-large-data/opt_pkt/: iter_helper.cpp  iter_helper.h  parallel_all_edge_cnc.h  pkt_merge.cpp  pkt_support_update_utils.h  pkt_tri_cnt_intermediate.cpp  pkt_tri_cnt_intermediate.h
opt-offload-large-data/util/: graph.cpp  histogram.h  jetbrains_fake.h  search_util.h  stat.cpp  stat.h  util.h
opt-offload-large-data/util/containers/: boolarray.h
opt-offload-large-data/util/cuda/: cuda_util.cu  cuda_util.h
opt-offload-large-data/util/graph/: graph.cpp  graph.h  graph_preprocessing.cpp
opt-offload-large-data/util/intersection/: set_inter_cnt_utils.h  set_utils.h
opt-offload-large-data/util/primitives/: local_buffer.h
opt-offload-large-data/util/search/: search_util.h
opt-offload-large-data/util/serialization/: pretty_print.h
opt-offload-large-data/util/sort/: parasort.h  parasort_cmp.h
opt-truss-decomp/: .gitignore  CMakeLists.txt  ReadMe.md
opt-truss-decomp/clique_utils/: .gitignore  README.md
opt-truss-decomp/exp_varying_parameters/: main_eval_tc.cpp  main_eval_tc_varing_wpt.cpp  main_varying_gt_ept_rs.cpp
opt-truss-decomp/opt_pkt/: extern_variables.cpp  extern_variables.h  iter_helper.cpp  iter_helper.h  main.cpp  parallel_all_edge_cnc.h  pkt_hash_map.cpp  pkt_merge.cpp  pkt_radix_map.cpp
opt-truss-decomp/pkt_parallel_org/: pkt_parallel.cpp  pkt_parallel_marking.cpp  pkt_parallel_marking_improved.cpp  pkt_parallel_skew_handling.cpp  pkt_parallel_skew_handling_vec.cpp  pkt_support_update_utils_legacy.h
opt-truss-decomp/pkt_serial/: pkt_serial.cpp  pkt_serial_experimental.cpp  pkt_serial_marking_improved.cpp  pkt_serial_marking_improved_experimental.cpp
opt-truss-decomp/playground/: CMakeLists.txt  clear_page_cache.cpp  kron_converter.cpp  test_bit_op.cpp  test_inheritence.cpp  test_pkc.cpp  test_pre_processing.cpp  test_reorder.cpp  test_tbb.cpp
opt-truss-decomp/related_work/: eager_ktruss.cpp  main_legacy.cpp  pkc.cpp  ros_improved.cpp  wc_improved.cpp
opt-truss-decomp/reordering_utils/: pkc_reorder.cpp  pkc_reorder_refactor.cpp
opt-truss-decomp/util/graph/: graph.cpp  graph.h  graph_preprocessing.cpp  pre_processing.h  triangle_counting.h
opt-truss-decomp/util/intersection/: intersection_util.h  set_inter_cnt_utils.h  set_utils.h
opt-truss-decomp/util/search/: search_util.cpp  search_util.h
(+315 files in other folders)
